<resources>
    <string name="app_name">Harris Helps</string>
    <string name="PROFILE_ADDRESS">Street Address</string>
    <string name="PROFILE_EMAIL">Email (required)</string>
    <string name="PROFILE_PRIMARYPHONE">Primary Phone</string>
    <string name="PROFILE_SECONDARYPHONE">Secondary Phone</string>
    <string name="PROFILE_BUTTON">Profile</string>
    <string name="PROFILE_FIRSTNAME">First Name (required)</string>
    <string name="PROFILE_LASTNAME">Last Name (required)</string>
    <string name="PROFILE_CITY">City</string>
    <string name="PROFILE_STATE">State</string>
    <string name="PROFILE_ZIPCODE">Zip Code</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_terms_of_use">TermsOfUseActivity</string>
    <string name="pick_image_intent_text">Choose an image</string>
  <string name="mapbox_access_token">pk.eyJ1IjoiZ2FuZGhpeWFuZGFwYWxsaSIsImEiOiJja2I5eGNlYjkwaXBkMndscWtodXRvNDR1In0.tPhoYwHNkKgXi9_O04eiPg</string>
    <string name="large_text"> <![CDATA[
Please call 911 if you have an emergency.
<p>
This Mobile Application should not be used while operating a motor vehicle.
<p>
By using this Mobile Application, I expressly waive the right to claim against Harris County, by reason of, and release Harris County firm any liability with respect to, any injury to person or damage to or loss of property (including consequential damages) resulting from any cause whatsoever (including the use of this Mobile App while operating a motor vehicle).
<p>
You expressly understand and agree that the Mobile Application should not be used for emergency services of any kind. Harris County assumes no liability for damages incurred directly or indirectly as a result of your usage of the Mobile App for emergencies or otherwise. Please call 911 if you have an emergency.
<p>
You expressly understand and agree that the Mobile Application is not intended for use in the operation of nuclear facilities, life support systems, emergency communications, aircraft navigation or communication systems, air traffic control systems, or any other activities in which the usage of the Mobile Application could lead to death, personal injury, or severe physical or environmental damage.
<p>
You expressly understand and agree that Harris County assumes no liability for damages incurred directly or indirectly as a result of errors, omissions, or discrepancies from data provided with usage of this Mobile Application.
<p>
You expressly understand and agree that Harris County is not liable to you under any theory of liability for any direct, indirect, incidental, special, consequential, or exemplary damages that may be incurred by you through your use of the Mobile Application, including any loss of data or damage to your mobile device, whether or not Harris County or its representatives have been advised of or should have been aware of the possibility of any such losses arising out of Mobile Application usage.
<p>
You expressly understand and agree that, to the maximum extent permitted by law, you indemnify and hold harmless Harris County, its affiliates and their respective directors, officials, officers, employees and agents from and against any and all claims, actions, suits or proceedings, as well as any and all losses, liabilities, damages, costs and expenses (including reasonable attorneys fees) arising out of or accruing from your use of the Mobile Application, including your downloading, installation, or use of the Mobile Application.
<p>
You expressly understand and agree that your use of the Mobile Application is at your sole discretion and risk and that the Mobile Application is provided as is and as available without any warranty of any kind and that Harris County disclaims any and all warranties or conditions, express or implied, including but not limited to the implied warranties of merchantability and fitness for a particular purpose.
<p>
In case of an emergency, call 911.
        ]]></string>
    <string name="action_settings">Settings</string>
    <string name="PROFILE_COMMTEXT">Your Local Commissioner is:</string>
    <string name="title_activity_request_details">RequestDetailsActivity</string>
    <string name="title_activity_map_view">Map</string>
    <string name="profile">Profile</string>
    <string name="contact">Contacts</string>
    <string name="termsofuse">Terms of Use</string>
    <string name="style_json">
  [
    {
      \"featureType\": \"all\",
      \"elementType\": \"geometry\",
      \"stylers\": [
        {
          \"color\": \"#242f3e\"
        }
      ]
    },
    {
      \"featureType\": \"all\",
      \"elementType\": \"labels.text.stroke\",
      \"stylers\": [
        {
          \"lightness\": -80
        }
      ]
    },
    {
      \"featureType\": \"administrative\",
      \"elementType\": \"labels.text.fill\",
      \"stylers\": [
        {
          \"color\": \"#746855\"
        }
      ]
    },
    {
      \"featureType\": \"administrative.locality\",
      \"elementType\": \"labels.text.fill\",
      \"stylers\": [
        {
          \"color\": \"#d59563\"
        }
      ]
    },
    {
      \"featureType\": \"poi\",
      \"elementType\": \"labels.text.fill\",
      \"stylers\": [
        {
          \"color\": \"#d59563\"
        }
      ]
    },
    {
      \"featureType\": \"poi.park\",
      \"elementType\": \"geometry\",
      \"stylers\": [
        {
          \"color\": \"#263c3f\"
        }
      ]
    },
    {
      \"featureType\": \"poi.park\",
      \"elementType\": \"labels.text.fill\",
      \"stylers\": [
        {
          \"color\": \"#6b9a76\"
        }
      ]
    },
    {
      \"featureType\": \"road\",
      \"elementType\": \"geometry.fill\",
      \"stylers\": [
        {
          \"color\": \"#2b3544\"
        }
      ]
    },
    {
      \"featureType\": \"road\",
      \"elementType\": \"labels.text.fill\",
      \"stylers\": [
        {
          \"color\": \"#9ca5b3\"
        }
      ]
    },
    {
      \"featureType\": \"road.arterial\",
      \"elementType\": \"geometry.fill\",
      \"stylers\": [
        {
          \"color\": \"#38414e\"
        }
      ]
    },
    {
      \"featureType\": \"road.arterial\",
      \"elementType\": \"geometry.stroke\",
      \"stylers\": [
        {
          \"color\": \"#212a37\"
        }
      ]
    },
    {
      \"featureType\": \"road.highway\",
      \"elementType\": \"geometry.fill\",
      \"stylers\": [
        {
          \"color\": \"#746855\"
        }
      ]
    },
    {
      \"featureType\": \"road.highway\",
      \"elementType\": \"geometry.stroke\",
      \"stylers\": [
        {
          \"color\": \"#1f2835\"
        }
      ]
    },
    {
      \"featureType\": \"road.highway\",
      \"elementType\": \"labels.text.fill\",
      \"stylers\": [
        {
          \"color\": \"#f3d19c\"
        }
      ]
    },
    {
      \"featureType\": \"road.local\",
      \"elementType\": \"geometry.fill\",
      \"stylers\": [
        {
          \"color\": \"#38414e\"
        }
      ]
    },
    {
      \"featureType\": \"road.local\",
      \"elementType\": \"geometry.stroke\",
      \"stylers\": [
        {
          \"color\": \"#212a37\"
        }
      ]
    },
    {
      \"featureType\": \"transit\",
      \"elementType\": \"geometry\",
      \"stylers\": [
        {
          \"color\": \"#2f3948\"
        }
      ]
    },
    {
      \"featureType\": \"transit.station\",
      \"elementType\": \"labels.text.fill\",
      \"stylers\": [
        {
          \"color\": \"#d59563\"
        }
      ]
    },
    {
      \"featureType\": \"water\",
      \"elementType\": \"geometry\",
      \"stylers\": [
        {
          \"color\": \"#17263c\"
        }
      ]
    },
    {
      \"featureType\": \"water\",
      \"elementType\": \"labels.text.fill\",
      \"stylers\": [
        {
          \"color\": \"#515c6d\"
        }
      ]
    },
    {
      \"featureType\": \"water\",
      \"elementType\": \"labels.text.stroke\",
      \"stylers\": [
        {
          \"lightness\": -20
        }
      ]
    }
  ]
  </string>
    <string name="normal_map">Normal</string>
    <string name="hybrid_map">Hybrid</string>
    <string name="terrain_map">Terrain</string>
    <string name="satellite_map">Satellite</string>
    <string name="welcome_to">Welcome to</string>
    <string name="home_text">You need a profile to submit a service request, so let\'s create  a profile and get started.</string>
    <string name="edit_profile">Edit Your Profile</string>
    <string name="create_profile">Create Profile</string>
    <string name="new_request">Submit a Request</string>
    <string name="no_request_have_been_submitted">No requests have been submitted.</string>

    <!-- START NEW REQUEST -->
    <string name="Description">Description</string>
    <string name="Type">Service Request Type</string>
    <string name="Location">Location</string>
    <string name="Photo">Photo</string>
  <string name="Category">Category</string>


    <string name="AddressHint"><font size="15">Enter an address</font></string>
    <string name="DescHint"><font size="15">Please enter a brief description of the issue you are reporting.</font></string>
    <string name="TypeHint"><font size="15">Tab here to select a service request type</font></string>
    <string name="TypePopupHint">Select Request Type</string>
    <string name="CategoryPopupHint">Select Category Type</string>
  <string name="CategoryHint"><font size="15">Tab here to select a service request category</font></string>

    <string name="RequestSuccess">Request Saved Successfully!!</string>
    <string name="RequestFailed">Failed to save request. Please try again!!</string>

    <string name="ErrAddress">Address is required!</string>
    <string name="ErrAddressInvalid">Invalid Address!</string>
    <string name="ErrType">Request Type is Required.</string>
    <string name="ErrDescription">Description is required!</string>
    <string name="ErrInvalidHarrisCountyAddress">You need a Harris County address to submit a services request.</string>
    <string name="requestCameraPermissions">Camera permission are needed which allows you to access this feature.</string>
    <string name="requestLocationPermissions">Location permission are needed which allows you to access this feature.</string>
    <string name="requestStoragePermissions">Storage permission are needed which allows you to access this feature.</string>
    <string name="requestPermissionsDontAsk">Permission are disable in the settings of the app.</string>


    <string name="TakePicture">Take a picture:</string>
    <string name="AddUpdate">Add/Update</string>
    <string name="Remove">Remove</string>
    <string name="PicturePopTitle">What would you like to do</string>
    <string name="PhotoTitleAdd">Tap here to add a photo</string>
    <string name="PhotoTitleUpdate">Tap here to update photo</string>
    <string name="PicturePopCancel">Cancel</string>

  <string name="err_network">NETWORK UNAVAILABLE PLEASE TRY LATER</string>
  <string name="gps_msg">Location is disabled, do you want to enable it?</string>
  <string name="yes">Yes</string>
  <string name="no">No</string>
    <string name="mapbox_map">Map Box Map</string>
    <string name="google_map">Google Map</string>
    <!-- END NEW REQUEST -->

</resources>
